# godot_tl

./: .gitignore  .travis.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SCsub  api_3_1.json  config.py  meson.build  meson_options.txt  patch_android_3_x_x.diff  patch_code_editor_4_0_0.diff  patch_default_theme_3_2_1.diff  patch_default_theme_3_2_2.diff  patch_default_theme_3_4_x.diff  patch_default_theme_4_0_0.diff  patch_dialog_3_x_x.diff  patch_editor_fonts.diff  patch_editor_fonts_3_2_1.diff  patch_editor_fonts_3_2_2.diff  patch_editor_fonts_3_2_x.diff  patch_editor_fonts_3_3_x.diff  patch_editor_fonts_3_4_0.diff  patch_editor_fonts_3_4_1.diff  patch_editor_fonts_4_0_0.diff  patch_font.diff  patch_font_4_0_0.diff  patch_gdcpp_android.diff  patch_gdcpp_cross_linux.diff  patch_gdcpp_ios.diff  patch_gdcpp_pad_32bit_variant.diff  patch_js_3_x_x.diff  patch_lbl.diff  patch_lbl_3_2_x.diff  patch_lbl_4_0_.diff  patch_lbl_4_0_0.diff  patch_le.diff  patch_le_3_2_x.diff  patch_le_3_3_x.diff  patch_le_4_0_0.diff  (+1 more)
.scripts/: clang_format.sh  gdn_build.sh  module_build.sh  module_build_3_2_1.sh  module_build_3_2_1_export.sh  module_build_3_2_2.sh  module_build_3_2_2_export.sh  module_build_4_0_0.sh  module_build_4_0_0_export.sh
demos/: README.md  ar_test.gdrtf  ar_test_jst.gdrtf  attribs_test.gdrtf  bitmap_font_test.gdrtf  dynamic_font_test.gdrtf  he_comes.gdrtf  logo.gdrtf  more_langs.gdrtf  opentype_ftr.gdrtf  thai_line_break_test.gdrtf
demos/common/fonts/: NotoNaskhArabicUI.fnt  NotoSansRegular.fnt
demos/ctrls_builtin/: Control.tscn  project.godot
demos/ctrls_gdnative/: Control.tscn  project.godot
demos/disp_builtin/: main.tscn  project.godot
demos/disp_gdnative/: main.tscn  project.godot
demos/disp_gdnative/fonts/: NotoNaskhArabicUI_0.png.import  NotoSansRegular_0.png.import
demos/fuzzer_builtin/: fuzzer_patch.diff  main.tscn  project.godot
demos/fuzzer_gdnative/: main.tscn  project.godot
demos/fuzzer_gdnative/addons/: libgdtl
demos/get_sample_texts_builtin/: main.tscn  project.godot  text_source
demos/input_builtin/: Panel.gd  Panel2.gd  main.tscn  project.godot
demos/input_gdnative/: Panel.gd  main.tscn  project.godot
demos/noto_sample_texts/: a.gdrtf  b.gdrtf  c.gdrtf  d.gdrtf  e.gdrtf  f.gdrtf  g.gdrtf  h.gdrtf  i.gdrtf  j.gdrtf  k.gdrtf  l.gdrtf  m.gdrtf  n.gdrtf  o.gdrtf  p.gdrtf  q.gdrtf  r.gdrtf  s.gdrtf  t.gdrtf  u.gdrtf  v.gdrtf  w.gdrtf  x.gdrtf  y.gdrtf  z.gdrtf
doc_classes/: TLBitmapFontFace.xml  TLDynamicFontFace.xml  TLFontFace.xml  TLFontFamily.xml  TLFontIterator.xml  TLGDFontWrapper.xml  TLICUDataLoader.xml  TLLabel.xml  TLLineEdit.xml  TLProtoControl.xml  TLProtoControlSelection.xml  TLRichTextEdit.xml  TLRichTextEditSelection.xml  TLShapedAttributedString.xml  TLShapedParagraph.xml  TLShapedString.xml
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: Makefile  conf.py  index.rst
godot-core/: Map.hpp
libgdtl/: constants.gd  gdtl.gd  libgdtl.gdnlib  plugin.cfg  tl_font_family_edit.gd  tl_font_family_preview.gd
libgdtl/classes/: tl_bitmap_font_face.gdns  tl_dynamic_font_face.gdns  tl_font_face.gdns  tl_font_family.gdns  tl_icu_data_loader.gdns  tl_label.gdns  tl_line_edit.gdns  tl_proto_control.gdns  tl_proto_control_selection.gdns  tl_rich_text_edit.gdns  tl_rich_text_edit_selection.gdns  tl_shaped_attributed_string.gdns  tl_shaped_paragraph.gdns  tl_shaped_string.gdns
src/: SCsub  tl_core.cpp  tl_core.hpp
src/controls/: tl_label.cpp  tl_label.hpp  tl_line_edit.cpp  tl_line_edit.hpp  tl_proto_control.cpp  tl_proto_control.hpp  tl_rich_text_edit.cpp  tl_rich_text_edit.hpp
src/resources/: tl_bitmap_font.cpp  tl_bitmap_font.hpp  tl_dynamic_font.cpp  tl_dynamic_font.hpp  tl_font.cpp  tl_font.hpp  tl_font_family.cpp  tl_font_family.hpp  tl_gd_font_wrapper.cpp  tl_gd_font_wrapper.hpp  tl_icu_data_loader.cpp  tl_icu_data_loader.hpp  tl_shaped_attributed_string.cpp  tl_shaped_attributed_string.hpp  tl_shaped_paragraph.cpp  tl_shaped_paragraph.hpp  tl_shaped_string.cpp  tl_shaped_string.hpp
src/tools/: tl_editor_node.cpp  tl_editor_node.h  tl_font_family_edit.cpp  tl_font_family_edit.hpp
subprojects/: README.md
subprojects/freetype2/: meson.build
subprojects/graphite2/: SCsub  meson.build
subprojects/harfbuzz/: SCsub  meson.build  meson_options.txt
subprojects/harfbuzz/src/: Makefile.in  hb-aat-fdsc-table.hh  hb-aat-layout-opbd-table.hh  hb-algs.hh  hb-array.hh  hb-bimap.hh  hb-cff-interp-common.hh  hb-cff-interp-cs-common.hh  hb-cff-interp-dict-common.hh  hb-cff1-interp-cs.hh  hb-cff2-interp-cs.hh  hb-config.hh  hb-dispatch.hh  hb-gdi.cc  hb-gdi.h  hb-meta.hh  hb-mutex.hh  hb-number-parser.hh  hb-number.cc  hb-number.hh  hb-ot-cff-common.hh  hb-ot-cff1-table.cc  hb-ot-cff1-table.hh  hb-ot-cff2-table.cc  hb-ot-cff2-table.hh  hb-ot-deprecated.h  hb-ot-face-table-list.hh  hb-ot-gasp-table.hh  hb-ot-meta-table.hh  hb-ot-meta.cc  hb-ot-meta.h  hb-ot-metrics.cc  hb-ot-metrics.h  hb-ot-metrics.hh  hb-ot-name-language-static.hh  hb-ot-var-gvar-table.hh  hb-pool.hh  hb-sanitize.hh  hb-serialize.hh  hb-subset-cff-common.cc  (+7 more)
subprojects/icu4c/: SCsub  meson.build
subprojects/icu4c/source/common/: capi_helper.h  localebuilder.cpp  localematcher.cpp  localeprioritylist.cpp  localeprioritylist.h  locdistance.cpp  locdistance.h  loclikelysubtags.cpp  loclikelysubtags.h  lsr.cpp  lsr.h  restrace.cpp  restrace.h  ulayout_props.h
subprojects/icu4c/source/common/unicode/: localebuilder.h  localematcher.h  unistr.h  ustring.h
subprojects/icu4c/source/data/: icudata_stub.cpp
subprojects/libpng/: meson.build
subprojects/zlib/: LICENSE  meson.build
toolchains/: android.arm64.toolchain  android.armv7.toolchain  android.x86.toolchain  android.x86_64.toolchain  build_commands  build_commands_mod  ios.arm64.toolchain  ios.arm64_sim.toolchain  ios.armv7.toolchain  ios.x86_64.toolchain  ios.x86_64_sim.toolchain  linux.arm64.toolchain  linux.x86.toolchain  linux.x86_64.toolchain  linux_mlib_x86.toolchain  macos.arm64.toolchain  macos.x86_64.toolchain
(+133 files in other folders)
