option('godot-cpp-lib-name', type : 'string', value : 'libgodot-cpp', description : 'GDNative C++ bindings static library name')
option('static-lib', type : 'boolean', value : false, description : 'Build static library')
option('static-runtime', type : 'boolean', value : false, description : 'Link libraries statically for better portability')
option('builtin-runtime', type : 'boolean', value : false, description : 'Use the built-in libraries')
option('use-graphite2', type : 'boolean', value : true, description : 'Enable Graphite2 complementary shaper')
option('use-ubsan', type : 'boolean', value : false, description : 'Use LLVM/GCC compiler undefined behavior sanitizer')
option('use-asan', type : 'boolean', value : false, description : 'Use LLVM/GCC compiler address sanitizer')
option('use-lsan', type : 'boolean', value : false, description : 'Use LLVM/GCC compiler leak sanitizer')
option('use-tsan', type : 'boolean', value : false, description : 'Use LLVM/GCC compiler thread sanitizer')